--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
         <h1>Camisha's Form</h1>
     </header>
     <main>
-        <form>
-            <label for="yourname" What is your name?></label>
+        <form action="mailto:camishalofton@gmail.com">
+            <div>
+            <label for="yourname">What is your name?</label>
             <input id="yourname" type="text" placeholder="John Doe"/>
+        </div>
+        <div>
+            <input type="button" value="Submit Button Text"/>
+        </div>
+
         </form>
 <aside style="float:right;"></aside>
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer>Built by Camisha</footer>
 </body>
 </html>
